--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "single-url",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://hieunm96dev.github.io/url-vnfite-app",
+  "homepage": "https://appvnfite.com.vn",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
